--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,23 +16,29 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      # Paso 2: Configurar Ruby
+      # Paso 2: Configurar Xcode (opcional, si necesitas una versión específica)
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "14.3.1"  # Especifica la versión de Xcode que necesitas
+      
+      # Paso 3: Configurar Ruby
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7' # Ajusta la versión de Ruby según la que estés utilizando
 
-      # Paso 3: Instalar Fastlane
+      # Paso 4: Instalar Fastlane
       - name: Install Fastlane
         run: gem install fastlane
 
-      # Paso 4: Configurar claves de acceso para App Store Connect
+      # Paso 5: Configurar claves de acceso para App Store Connect
       - name: Configure App Store Connect API Key
         env:
           FASTLANE_USER: ${{ secrets.FASTLANE_USER }}
           FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
           APP_STORE_CONNECT_API_KEY_JSON: ${{ secrets.APP_STORE_CONNECT_API_KEY_JSON }}
 
-      # Paso 5: Ejecutar la lane de Fastlane para TestFlight
+      # Paso 6: Ejecutar la lane de Fastlane para TestFlight
       - name: Run Fastlane Beta Lane
         run: fastlane beta
