--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "14.0"  # Especifica la versión de Xcode que necesitas
+          xcode-version: "14.3.1"  # Actualiza la versión de Xcode a la disponible
 
       # Paso 3: Instalar dependencias con Swift Package Manager
       - name: Resolve Swift Package Dependencies
